# restaurant_manager

./: README.md  cloud_formation.yaml  dynamodb.yaml  eks-cluster.yaml  pyproject.toml  restaurant_manager.code-workspace  schema_guide.yaml
.github/workflows/: ci-cd.yaml
helm/pricing_analyzer/: Chart.yaml  values.yaml
helm/pricing_analyzer/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/sales_inventory_manager/: Chart.yaml  values.yaml
helm/sales_inventory_manager/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/supply_gap_analyzer/: Chart.yaml  values.yaml
models/: pyproject.toml
pricing_analyzer/: Dockerfile  pyproject.toml
sales_inventory_manager/: Dockerfile  pyproject.toml
sales_inventory_manager/src/: inventory_manager_api.py  purchases.py  sales.py
scripts/: ec2_setup.sh  seed_dynamo.py
src/: DemandForecaster.py  KrogerClient.py  PricingAnalyzer.py  RecommendationEngine.py  SupplyGapAnalyzer.py  forecast_listener.py  forecast_service.py  inventory_classes.py  inventory_manager.py  inventory_manager_api.py  purchases.py  recommendation_api.py  sales.py  supply_change_listener.py  supply_gap_api.py  supply_gap_listener.py
src/models/: inventory_classes.py
src/sales_inventory_manager/: purchases.py
src/supply_gap_analyzer/: supply_change_listener.py
supply_gap_analyzer/: Dockerfile  pyproject.toml
supply_gap_analyzer/src/: SupplyGapAnalyzer.py
(+11 files in other folders)
