[project]
name = "restaurant-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.14",
    "boto3-stubs[dynamodb,sns,sqs]>=1.43.14",
    "botocore>=1.43.14",
    "fastapi[standard]>=0.136.3",
    "requests>=2.34.2",
]
